[gd_scene load_steps=35 format=2]

[ext_resource path="res://Sprites/Veh0.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Trail.gd" type="Script" id=3]
[ext_resource path="res://Sprites/trail.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/MainGun.gd" type="Script" id=6]
[ext_resource path="res://Scenes/AutoGun.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Spawner.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Placeable.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/WaveLabel.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/Gun0Base.png" type="Texture" id=12]
[ext_resource path="res://Sprites/AutoGunBase.png" type="Texture" id=13]
[ext_resource path="res://Scenes/MuzzleFlash.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/ShootHere.gd" type="Script" id=15]
[ext_resource path="res://Scenes/SmokeLength.gd" type="Script" id=16]
[ext_resource path="res://Scenes/SmokeLgParticles.tres" type="Material" id=17]
[ext_resource path="res://Scenes/SmokeLgEngineParticles.tres" type="Material" id=18]
[ext_resource path="res://Scenes/SmokeSmallEngineParticles.tres" type="Material" id=19]
[ext_resource path="res://Scenes/SmokeSmallParticles.tres" type="Material" id=20]
[ext_resource path="res://Shaders/dissolveShader.tres" type="Shader" id=21]
[ext_resource path="res://Scenes/CloudHandler.gd" type="Script" id=22]
[ext_resource path="res://Scenes/TankBoss.tscn" type="PackedScene" id=23]
[ext_resource path="res://Scenes/WormBoss.tscn" type="PackedScene" id=24]
[ext_resource path="res://Scenes/SuperTanker.tscn" type="PackedScene" id=25]
[ext_resource path="res://Scenes/PlatformBoss.tscn" type="PackedScene" id=26]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 21 )
shader_param/sensitivity = 0.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 60.5, 17.25 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 15.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 17.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64, 19.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 6.16159

[sub_resource type="Gradient" id=7]

[sub_resource type="GradientTexture2D" id=8]
gradient = SubResource( 7 )
width = 5000
height = 5000
fill = 1
fill_from = Vector2( 0.491667, 0.499479 )
fill_to = Vector2( 0.683333, 0.6875 )

[node name="Player" type="KinematicBody2D" groups=["Friendly", "Player"]]
z_index = 1
script = ExtResource( 2 )
bulletPlasma = ExtResource( 5 )
muzzleflash = ExtResource( 14 )
mine = ExtResource( 10 )
scatterBombPos = [ NodePath("ScatterBomb1"), NodePath("ScatterBomb2"), NodePath("ScatterBomb3"), NodePath("ScatterBomb4"), NodePath("ScatterBomb5"), NodePath("ScatterBomb6"), NodePath("ScatterBomb7") ]

[node name="Trail" type="Line2D" parent="."]
position = Vector2( 17, 0 )
width = 40.0
default_color = Color( 0, 0, 0, 0.0705882 )
texture = ExtResource( 4 )
texture_mode = 1
script = ExtResource( 3 )
trailLength = 125
targetPath = NodePath("..")

[node name="SmokeSmall" type="Particles2D" parent="."]
position = Vector2( -19, 7 )
rotation = 1.5708
emitting = false
amount = 15
process_material = ExtResource( 20 )
script = ExtResource( 16 )
originalColor = "848484"

[node name="SmokeSmall2" type="Particles2D" parent="SmokeSmall"]
position = Vector2( -2, 1 )
emitting = false
amount = 15
process_material = ExtResource( 20 )
script = ExtResource( 16 )
originalColor = "848484"

[node name="SmokeSmallEngine" type="Particles2D" parent="SmokeSmall"]
position = Vector2( -13, -37 )
scale = Vector2( -1, 1 )
z_index = 6
emitting = false
amount = 25
process_material = ExtResource( 19 )
script = ExtResource( 16 )
smokeLengthVsSpeed = 400
originalColor = "848484"

[node name="SmokeLarge" type="Particles2D" parent="."]
position = Vector2( -57, 12 )
rotation = 1.5708
emitting = false
amount = 15
process_material = ExtResource( 17 )
script = ExtResource( 16 )
originalColor = "848484"

[node name="SmokeLarge2" type="Particles2D" parent="SmokeLarge"]
position = Vector2( -2, 1 )
emitting = false
amount = 15
process_material = ExtResource( 17 )
script = ExtResource( 16 )
originalColor = "848484"

[node name="SmokeLargeEngine" type="Particles2D" parent="SmokeLarge"]
position = Vector2( -23, -115 )
scale = Vector2( -1, 1 )
z_index = 6
emitting = false
amount = 25
lifetime = 2.0
process_material = ExtResource( 18 )
script = ExtResource( 16 )
smokeLengthVsSpeed = 400
originalColor = "848484"

[node name="Vehicle" type="Sprite" parent="."]
material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="ColliderVehLarge" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )
disabled = true

[node name="ColliderVehSmall" type="CollisionShape2D" parent="."]
position = Vector2( 1, -0.5 )
shape = SubResource( 1 )
disabled = true

[node name="Collide01" type="Area2D" parent="." groups=["PlayerCollider"]]

[node name="Collide01" type="CollisionShape2D" parent="Collide01"]
position = Vector2( 1, -0.5 )
shape = SubResource( 3 )
disabled = true

[node name="Collide2345" type="Area2D" parent="." groups=["PlayerCollider"]]

[node name="Collide2345" type="CollisionShape2D" parent="Collide2345"]
position = Vector2( 0, 0.5 )
shape = SubResource( 4 )
disabled = true

[node name="MainGun" type="Sprite" parent="."]
position = Vector2( -9.932, 0 )
z_index = 5
texture = ExtResource( 12 )
offset = Vector2( 5, 0 )
script = ExtResource( 6 )

[node name="ShootHere" type="Position2D" parent="."]
position = Vector2( 250, 0 )
script = ExtResource( 15 )

[node name="Spawner" type="Position2D" parent="."]
position = Vector2( 2105, 2031 )
script = ExtResource( 9 )
enemyBase = ExtResource( 8 )
platformBoss = ExtResource( 26 )
tankBoss = ExtResource( 23 )
supertankerBoss = ExtResource( 25 )
wormBoss = ExtResource( 24 )
waveWords = ExtResource( 11 )
spawns = [ NodePath("Spawn1"), NodePath("Spawn2"), NodePath("Spawn3"), NodePath("Spawn4"), NodePath("Spawn5") ]

[node name="Spawn1" type="Position2D" parent="Spawner"]
position = Vector2( 3018, -884 )

[node name="Spawn2" type="Position2D" parent="Spawner"]
position = Vector2( 678, -4417 )

[node name="Spawn3" type="Position2D" parent="Spawner"]
position = Vector2( -3662, -5154 )

[node name="Spawn4" type="Position2D" parent="Spawner"]
position = Vector2( -6848, -2748 )

[node name="Spawn5" type="Position2D" parent="Spawner"]
position = Vector2( -4731, 968 )

[node name="Spawn6" type="Position2D" parent="Spawner"]
position = Vector2( -6435, -308 )

[node name="Spawn7" type="Position2D" parent="Spawner"]
position = Vector2( -6894, -1684 )

[node name="Spawn8" type="Position2D" parent="Spawner"]
position = Vector2( -6361, -3875 )

[node name="Spawn9" type="Position2D" parent="Spawner"]
position = Vector2( -4856, -4597 )

[node name="Spawn10" type="Position2D" parent="Spawner"]
position = Vector2( -1766, -5452 )

[node name="Spawn11" type="Position2D" parent="Spawner"]
position = Vector2( 1242, -5754 )

[node name="Spawn12" type="Position2D" parent="Spawner"]
position = Vector2( 3373, -4422 )

[node name="Spawn13" type="Position2D" parent="Spawner"]
position = Vector2( 3058, -2787 )

[node name="Spawn14" type="Position2D" parent="Spawner"]
position = Vector2( 2198, 562 )

[node name="Spawn15" type="Position2D" parent="Spawner"]
position = Vector2( -8183, 1285 )

[node name="Spawn16" type="Position2D" parent="Spawner"]
position = Vector2( 3720, 141 )

[node name="Spawn17" type="Position2D" parent="Spawner"]
position = Vector2( -2341, 1173 )

[node name="Spawn18" type="Position2D" parent="Spawner"]
position = Vector2( -8015, -92 )

[node name="Spawn19" type="Position2D" parent="Spawner"]
position = Vector2( -6060, -4988 )

[node name="Spawn20" type="Position2D" parent="Spawner"]
position = Vector2( -8015, -4697 )

[node name="Spawn21" type="Position2D" parent="Spawner"]
position = Vector2( -332, 1120 )

[node name="Spawn22" type="Position2D" parent="Spawner"]
position = Vector2( -5191, -5826 )

[node name="Spawn23" type="Position2D" parent="Spawner"]
position = Vector2( -2023, -6346 )

[node name="Spawn24" type="Position2D" parent="Spawner"]
position = Vector2( 695, -6074 )

[node name="Spawn25" type="Position2D" parent="Spawner"]
position = Vector2( 3595, -4987 )

[node name="Spawn26" type="Position2D" parent="Spawner"]
position = Vector2( 3734, -5796 )

[node name="Spawn27" type="Position2D" parent="Spawner"]
position = Vector2( 4676, -2594 )

[node name="Spawn28" type="Position2D" parent="Spawner"]
position = Vector2( 6504, -1138 )

[node name="Spawn29" type="Position2D" parent="Spawner"]
position = Vector2( -5543, 2645 )

[node name="Spawn30" type="Position2D" parent="Spawner"]
position = Vector2( 3765, 1940 )

[node name="Spawn31" type="Position2D" parent="Spawner"]
position = Vector2( 1767, 2512 )

[node name="Spawn32" type="Position2D" parent="Spawner"]
position = Vector2( -3450, 2571 )

[node name="Spawn33" type="Position2D" parent="Spawner"]
position = Vector2( -6468, 900 )

[node name="Spawn34" type="Position2D" parent="Spawner"]
position = Vector2( -9291, -3639 )

[node name="Spawn35" type="Position2D" parent="Spawner"]
position = Vector2( 2994, -6761 )

[node name="Spawn36" type="Position2D" parent="Spawner"]
position = Vector2( -6805, -6246 )

[node name="Spawn37" type="Position2D" parent="Spawner"]
position = Vector2( -8727, -6034 )

[node name="Spawn38" type="Position2D" parent="Spawner"]
position = Vector2( -7446, -7348 )

[node name="Spawn39" type="Position2D" parent="Spawner"]
position = Vector2( -1229, -8493 )

[node name="Spawn40" type="Position2D" parent="Spawner"]
position = Vector2( 676, -7570 )

[node name="Spawn41" type="Position2D" parent="Spawner"]
position = Vector2( 4985, -5116 )

[node name="Spawn42" type="Position2D" parent="Spawner"]
position = Vector2( 1135, 1201 )

[node name="Spawn43" type="Position2D" parent="Spawner"]
position = Vector2( -2726, -7961 )

[node name="Spawn44" type="Position2D" parent="Spawner"]
position = Vector2( 6246, -4299 )

[node name="Spawn45" type="Position2D" parent="Spawner"]
position = Vector2( 4586, -326 )

[node name="Spawn46" type="Position2D" parent="Spawner"]
position = Vector2( -4710, 1950 )

[node name="Spawn47" type="Position2D" parent="Spawner"]
position = Vector2( -7093, 2905 )

[node name="Spawn48" type="Position2D" parent="Spawner"]
position = Vector2( -944, 3214 )

[node name="Spawn49" type="Position2D" parent="Spawner"]
position = Vector2( -7838, -2803 )

[node name="Spawn50" type="Position2D" parent="Spawner"]
position = Vector2( -8420, -1891 )

[node name="Spawn51" type="Position2D" parent="Spawner"]
position = Vector2( -5433, -7422 )

[node name="Spawn52" type="Position2D" parent="Spawner"]
position = Vector2( -4211, -6838 )

[node name="Spawn53" type="Position2D" parent="Spawner"]
position = Vector2( -4335, -8443 )

[node name="AutoGun" type="Sprite" parent="."]
visible = false
position = Vector2( -10, 0 )
z_index = 3
texture = ExtResource( 13 )
offset = Vector2( 8, 0 )
script = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="AutoGun"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoGun/Area2D"]
scale = Vector2( 100, 100 )
shape = SubResource( 2 )

[node name="ScatterBomb1" type="Position2D" parent="."]
position = Vector2( -214, -382 )

[node name="ScatterBomb2" type="Position2D" parent="."]
position = Vector2( 221, -376 )

[node name="ScatterBomb3" type="Position2D" parent="."]
position = Vector2( 482, -198 )

[node name="ScatterBomb4" type="Position2D" parent="."]
position = Vector2( -209, 372 )

[node name="ScatterBomb5" type="Position2D" parent="."]
position = Vector2( 262, 381 )

[node name="ScatterBomb6" type="Position2D" parent="."]
position = Vector2( 467, 129 )

[node name="ScatterBomb7" type="Position2D" parent="."]
position = Vector2( -472, 1 )

[node name="CloudHandler" type="Node2D" parent="."]
script = ExtResource( 22 )

[node name="Light2D" type="Light2D" parent="."]
texture = SubResource( 8 )
color = Color( 1, 0.894832, 0.726563, 1 )
energy = 0.5

[connection signal="body_shape_entered" from="Collide01" to="." method="_on_Collide01_body_shape_entered"]
[connection signal="body_shape_entered" from="Collide2345" to="." method="_on_Collide2345_body_shape_entered"]
[connection signal="body_entered" from="AutoGun/Area2D" to="AutoGun" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="AutoGun/Area2D" to="AutoGun" method="_on_Area2D_body_exited"]
